# sql-split

./: .gitignore  Cargo.toml  README.md  release-and-bench.sh  release-and-test.sh  run-test.sh  run.sh
.github/workflows/: test.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  splitter.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/reader/: Cargo.toml
crates/reader/src/: lib.rs  reader.rs
crates/reader/src/benches/: reader_bench.rs
crates/sprinkler/: Cargo.toml
crates/sprinkler/src/: lib.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs  token.rs
crates/writer/: Cargo.toml
crates/writer/src/: lib.rs
crates/writer/src/benches/: writer_bench.rs
resources/output/: 1.sql  2.sql  3.sql  4.sql  5.sql  old_sql-split-cli  sql-split-cli
resources/test_db/: big.sql  copy.txt  fn.sql
resources/test_files/: small.sql
sql-split-cli/: Cargo.toml
sql-split-cli/src/: cli.rs  main.rs  splitter.rs
sql-split-cli/src/parser/: parser.rs
sql-split-cli/src/tokenizer/: mod.rs  reader.rs  token.rs  token_err.rs  tokenizer.rs
sql-split-reader/: Cargo.toml
sql-split-reader/src/: lib.rs
sql-split-reader/src/benches/: reader_bench.rs
src/: main.rs  parser.rs  reader.rs  splitter.rs  tokenizer.rs
src/parser/: parser.rs
src/tokenizer/: mod.rs  reader.rs  tokenizer.rs
