[workspace]
resolver = "2"
members = [
    "crates/reader",
    "crates/parser",
    "crates/tokenizer",
    "crates/cli",
]

[workspace.package]
authors = ["Akshay Deep <akshay.deep0@gmail.com>"]
rust-version = "1.66.0"

[workspace.dependencies]
reader = { path = "crates/reader" }
parser = { path = "crates/parser" }
tokenizer = { path = "crates/tokenizer" }
cli = { path = "crates/cli" }
